--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = { version = "4.4", features = ["derive"] }
 ctrlc = "3.4.1"
 tempdir = "0.3.7"
+serde_json = "1.0.64"
+anyhow = "1.0.44"
